--- a/src/pages/my/styles.less
+++ b/src/pages/my/styles.less
@@ -1,3 +1,20 @@
-.login{
-
+.my{
+  .header{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 40px 0;
+    background-color: #eee;
+    .control{
+      margin-top: 20px;
+    }
+    .name{
+      font-size: 20px;
+    }
+  }
+  .logout{
+    margin-top: 100px;
+    padding: 0 20px;
+  }
 }
