--- a/src/pages/my/styles.less
+++ b/src/pages/my/styles.less
@@ -6,6 +6,11 @@
     flex-direction: column;
     padding: 40px 0;
     background-color: #eee;
+    .setting{
+      position: absolute;
+      right: 20px;
+      top: 20px;
+    }
     .control{
       margin-top: 20px;
     }
