添加编辑接口

--- a/src/pages/my/styles.less
+++ b/src/pages/my/styles.less
@@ -17,6 +17,11 @@
     .name{
       font-size: 20px;
     }
+    .sign{
+      margin-top: 10px;
+      text-align: center;
+      color: #999;
+    }
   }
   .logout{
     margin-top: 100px;
