faet: 改成宝能项目

--- a/src/layouts/index.less
+++ b/src/layouts/index.less
@@ -12,6 +12,7 @@
   }
   .navbar{
     position: absolute;
+    //padding-bottom: 20px;
     z-index: 999;
     background-color: #fff;
     width: 100%;
