--- a/src/pages/invest/styles.less
+++ b/src/pages/invest/styles.less
@@ -36,3 +36,84 @@
     }
   }
 }
+
+.result{
+  margin: 10px;
+  //margin-bottom: 20px;
+  padding: 20px 25px 20px 25px;
+  border-top-right-radius: 15px;
+  border-top-left-radius: 15px;
+  background-image: linear-gradient(0deg, rgba(255, 255, 255, 0) 0%, rgba(84, 120, 244, 0.35) 100%);;
+  .score{
+    padding: 15px 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    .scoreTitle{
+      font-size: 16px;
+      font-weight: 500;
+      color: #333333;
+      span{
+        color: #666666;
+      }
+    }
+    .scoreValue{
+      font-size: 20px;
+      font-weight: bold;
+      color: #0E95A0;
+    }
+  }
+}
+
+.resultItem{
+  margin-bottom: 20px;
+  background-color: #fff;
+  border-radius: 15px;
+  padding: 20px 20px;
+  .box{
+    margin-bottom: 10px;
+  }
+  .item{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 15px 0;
+    border-top: 1px solid #F1F1F1;;
+    .label{
+      font-weight: 400;
+      font-size: 14px;
+      color: #666666;
+    }
+    .val{
+      font-size: 17px;
+      font-weight: 500;
+      color: #0E95A0;
+    }
+  }
+}
+
+.title{
+  position: relative;
+  display: inline-block;
+  z-index: 1;
+  font-size: 16px;
+  padding-bottom: 5px;
+  padding-left: 7px;
+  font-weight: 500;
+  color: #3D3D3D;
+
+  &:after{
+    position: absolute;
+    height: 12px;
+    left: 0;
+    bottom: 0;
+    background-image: linear-gradient(270deg, rgba(255, 255, 255, 0) 0%, rgba(84, 120, 244, 0.35) 100%);;
+    width: 150%;
+    content: '';
+  }
+
+}
+
+.btn{
+  margin: 0 10px;
+}
