--- a/src/pages/invest/styles.less
+++ b/src/pages/invest/styles.less
@@ -40,7 +40,7 @@
 .result{
   margin: 10px;
   //margin-bottom: 20px;
-  padding: 20px 25px 20px 25px;
+  padding: 20px 25px 20px 10px;
   border-top-right-radius: 15px;
   border-top-left-radius: 15px;
   background-image: linear-gradient(0deg, rgba(255, 255, 255, 0) 0%, rgba(84, 120, 244, 0.35) 100%);;
@@ -85,9 +85,15 @@
       color: #666666;
     }
     .val{
+      display: inline-block;
       font-size: 17px;
       font-weight: 500;
       color: #0E95A0;
+    }
+    .unit{
+      margin-left: 5px;
+      display: inline-block;
+      color: #666;
     }
   }
 }
