--- a/src/pages/invest/styles.less
+++ b/src/pages/invest/styles.less
@@ -19,8 +19,10 @@
   }
 
   :global(.adm-list-item-content-extra){
-    color: #333333;
+    color: rgba(#333333,.33);
+    //color: rgb(204,204,204);
     font-size: 16px;
+
   }
   .formItem{
     ---prefix-width: 150px;
@@ -63,6 +65,9 @@
       color: #0E95A0;
     }
   }
+  .tips{
+    color: #666;
+  }
 }
 
 .resultItem{
@@ -102,11 +107,15 @@
   position: relative;
   display: inline-block;
   z-index: 1;
-  font-size: 16px;
+  font-size: 18px;
   padding-bottom: 5px;
   padding-left: 7px;
   font-weight: 500;
   color: #3D3D3D;
+  span{
+    font-size: 13px;
+    color: #666;
+  }
 
   &:after{
     position: absolute;
