--- a/src/pages/invest/styles.less
+++ b/src/pages/invest/styles.less
@@ -60,13 +60,14 @@
       }
     }
     .scoreValue{
-      font-size: 20px;
+      font-size: 24px;
       font-weight: bold;
       color: #0E95A0;
     }
   }
   .tips{
     color: #666;
+    line-height: 1.2;
   }
 }
 
